--- a/about.html
+++ b/about.html
@@ -44,31 +44,33 @@
             <div class="main-area">
                 <main class="about">
                     <div class="index-func">
-                        <h3>御利益（ごりえき）</h2>
+                        <h3>御利益<small>（ごりえき）</small></h2>
                             <p>神社や仏閣で神仏から授かる加護や恩恵のこと。参拝したり、お守りを持ったりすることで、健康・商売繁盛・学業成就などの御利益が得られるとされる。</p>
                     </div>
                     <div class="index-func">
-                        <h3>狛犬（こまいぬ）</h2>
-                            <p>神社の入口などに対で置かれる獅子のような像。口を開けた阿形（あぎょう）と、口を閉じた吽形（うんぎょう）が対になっており、邪気を払う役割を持つ。狛犬と呼ばれるが、犬の形に限らない。</p>
+                        <h3>狛犬<small>（こまいぬ）</small></h2>
+                            <p>神社の入口などに対で置かれる獅子のような像。口を開けた阿形（あぎょう）と、口を閉じた吽形（うんぎょう）が対になっており、邪気を払う役割を持つ。
+                                <br/>狛犬と呼ばれるが、犬の形に限らない。
+                            </p>
                     </div>
 
                     <div class="index-func">
-                        <h3>十二支（じゅうにし）</h2>
+                        <h3>十二支<small>（じゅうにし）</small></h2>
                             <p>子・丑・寅など12の動物で構成される干支の一部。年や方角、性格占いなどに用いられる。</p>
                     </div>
 
                     <div class="index-func">
-                        <h3>神社（じんじゃ）</h2>
+                        <h3>神社<small>（じんじゃ）</small></h2>
                             <p>神道の神々を祀る施設。鳥居をくぐり、参道を進んで参拝する。祭りや祈願が行われる場所。</p>
                     </div>
 
                     <div class="index-func">
-                        <h3>神使（しんし）</h2>
+                        <h3>神使<small>（しんし）</small></h2>
                             <p>神の使いとされる動物。稲荷神社の狐、天満宮の牛、八幡神社の鳩など、神ごとに異なる動物が定められている。</p>
                     </div>
 
                     <div class="index-func">
-                        <h3>生肖（せいしょう）</h2>
+                        <h3>生肖<small>（せいしょう）</small></h2>
                             <p>中国の十二支を指し、日本の十二支と同様に、年ごとの動物で人の性格や運勢を占う文化がある。</p>
                     </div>
                 </main>
