ファイル構造調整

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/favicon.webp">
 </head>
 
-<body>
+<body class="page-index">
     <div class="en1">
         <img src="images/en1.webp">
     </div>
@@ -72,6 +72,7 @@
                             <img src="images/carousel/c3.webp">
                             <img src="images/carousel/c4.webp">
                             <img src="images/carousel/c5.webp">
+                            
                             <img src="images/carousel/c1.webp">
                             <img src="images/carousel/c2.webp">
                             <img src="images/carousel/c3.webp">
