--- a/jinjasagashi.html
+++ b/jinjasagashi.html
@@ -36,12 +36,12 @@
                 </div>
 
                 <h1 class="jinjasagashi">干支を選んでね！<br/>
-                    <span class="demonote"">（※DEMO版は「子」のみです）</span>
+                    <span class="demonote"">（※DEMO版は「子」のみとなります）</span>
                 </h1>
 
                 <div class="select-step1 justify-wrapper">
                     <div class="select-step1-item">
-                        <a href="jinjasagashi1.html">
+                        <a href="blessings.html">
                             <div class="zodiac-box">
                                 <img src="images/zodiacA1.webp" alt="子" />
                             </div>
