--- a/kotowaza.html
+++ b/kotowaza.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/favicon.webp">
 </head>
 
-<body>
+<body class="page-kotowaza">
     <div class="en1"><img src="images/en1.webp"></div>
     <div class="en2"><img src="images/en2.webp"></div>
     <div class="cloud1"><img src="images/cloud1.webp"></div>
@@ -32,6 +32,7 @@
                 <div class="page-icon">
                     <a href="kotowaza.html"><img src="images/icon-kuji.webp"></a>
                 </div>
+
                 <h1 class="kotowaza">今日のことわざ</h1>
                 <div class="proverb-area">
                     <div id="proverbText" class="proverb-text"></div>
@@ -67,27 +68,7 @@
     </div>
 
     <script src="js/kotowaza.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const proverbText = document.getElementById('proverbText');
-            const proverbDesc = document.getElementById('proverbDesc');
-            const retryBtn = document.getElementById('retryBtn');
-
-            // Function to display a random proverb
-            function displayRandomProverb() {
-                const randomIndex = Math.floor(Math.random() * proverbs.length);
-                const proverb = proverbs[randomIndex];
-                proverbText.innerHTML = proverb.hiragana;
-                proverbDesc.textContent = proverb.proverbDesc;
-            }
-
-            // Display a random proverb on page load
-            displayRandomProverb();
-
-            // Retry button to show a new random proverb
-            retryBtn.addEventListener('click', displayRandomProverb);
-        });
-    </script>
+    
 </body>
 
 </html>
