--- a/jinja3.html
+++ b/jinja3.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="images/favicon.webp">
 </head>
 
-<body>
+<body class="page-jinja">
     <!-- Existing decorative elements -->
     <div class="en1"><img src="images/en1.webp"></div>
     <div class="en2"><img src="images/en2.webp"></div>
