細かい調整

--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
     <link rel="icon" href="images/favicon.webp">
 </head>
 
-<body>
+<body class="page-about">
+    <!-- Existing decorative elements -->
     <div class="en1">
         <img src="images/en1.webp">
     </div>
