--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body class="page-index">
+    <!-- Existing decorative elements -->
     <div class="en1">
         <img src="images/en1.webp">
     </div>
