--- a/jinjasagashi.html
+++ b/jinjasagashi.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- Existing decorative elements -->
     <div class="en1"><img src="images/en1.webp" /></div>
     <div class="en2"><img src="images/en2.webp" /></div>
     <div class="cloud1"><img src="images/cloud1.webp" /></div>
